# ewwi

./: Cargo.toml  readme.md
example_scripts/: fibonacci.eww  hello_world.eww
lib/stdlib/: loops.eww
src/: main.rs
src/extensions/: take.rs
src/syntax/: lexer.rs  parser.rs
src/utils/: mod.rs
